🚀 chore(package.json): add @ant-design/maps and tailwind-scrollbar dependencies ✨ feat(BaseLayout): add z-index to navbar to fix overlapping issue ✨ feat(index.tsx): add ThailandMap component and update Home component to display map and case data 🎨 style(globals.css): add padding-left 0 to ant-collapse-header 🎨 style(tailwind.config.js): add tailwind-scrollbar plugin to tailwind config

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,6 +80,9 @@
 .ant-breadcrumb ol {
     @apply items-center;
 }
+.ant-collapse-header {
+    padding-left: 0 !important;
+}
 /* .ant-form-item {
     margin-bottom: 16px;
 } */
